// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph should output large CSS the \`large\` prop is set 1`] = `
.emotion-0 {
  color: #3b3f45;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 2.3rem;
  line-height: 1.565217391304348;
}

<p
  class="emotion-0 emotion-1"
>
  I'm an important body of text.
</p>
`;

exports[`Paragraph should output regular CSS when neither \`large\` nor \`small\` props are set 1`] = `
.emotion-0 {
  color: #3b3f45;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<p
  class="emotion-0 emotion-1"
>
  Lorem ipsum.
</p>
`;

exports[`Paragraph should output small CSS the \`small\` prop is set 1`] = `
.emotion-0 {
  color: #3b3f45;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.5;
}

<p
  class="emotion-0 emotion-1"
>
  I'm a tiny body of text.
</p>
`;
